--- a/Recommendations/Hotel Recommendation Based on tags.ipynb
+++ b/Recommendations/Hotel Recommendation Based on tags.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
        "[1492 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -825,7 +825,7 @@
        "user         0        1     0       1      0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,9 +840,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotel Name:  Haymarket Hotel\n",
+      "Average Score:  14708    9.6\n",
+      "Name: Average_Score, dtype: float64\n",
+      "Business    0\n",
+      "Leisure     1\n",
+      "Solo        0\n",
+      "Couple      1\n",
+      "Group       0\n",
+      "Name: Haymarket Hotel, dtype: int64\n",
+      "Similarity score 1.0\n",
+      "\n",
+      "\n",
+      "Hotel Name:  H tel de La Tamise Esprit de France\n",
+      "Average Score:  176997    9.6\n",
+      "Name: Average_Score, dtype: float64\n",
+      "Business    0\n",
+      "Leisure     1\n",
+      "Solo        0\n",
+      "Couple      1\n",
+      "Group       0\n",
+      "Name: H tel de La Tamise Esprit de France, dtype: int64\n",
+      "Similarity score 1.0\n",
+      "\n",
+      "\n",
+      "Hotel Name:  41\n",
+      "Average Score:  185602    9.6\n",
+      "Name: Average_Score, dtype: float64\n",
+      "Business    0\n",
+      "Leisure     1\n",
+      "Solo        0\n",
+      "Couple      1\n",
+      "Group       0\n",
+      "Name: 41, dtype: int64\n",
+      "Similarity score 1.0\n",
+      "\n",
+      "\n",
+      "Hotel Name:  Hotel Casa Camper\n",
+      "Average Score:  316447    9.6\n",
+      "Name: Average_Score, dtype: float64\n",
+      "Business    0\n",
+      "Leisure     1\n",
+      "Solo        0\n",
+      "Couple      1\n",
+      "Group       0\n",
+      "Name: Hotel Casa Camper, dtype: int64\n",
+      "Similarity score 1.0\n",
+      "\n",
+      "\n",
+      "Hotel Name:  Hotel The Serras\n",
+      "Average Score:  398945    9.6\n",
+      "Name: Average_Score, dtype: float64\n",
+      "Business    0\n",
+      "Leisure     1\n",
+      "Solo        0\n",
+      "Couple      1\n",
+      "Group       0\n",
+      "Name: Hotel The Serras, dtype: int64\n",
+      "Similarity score 1.0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "similarityDF=cosine_similarity(processedDF,userDF)\n",
     "#len(similarity.tolist())\n",
